--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -1,4 +1,120 @@
 *{
-    background: #96c93d;
+    padding: 0;
+    margin: 0;
+
+    box-sizing: border-box;
+}
+
+:root{
+    font-size: 62.5%;
+}
+
+html, body{
+    width: 100%;
+    height: 100%;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header{
+    display: flex;
+
+    justify-content: space-between;
+
+    width: 100%;
+    height: 10%;
+
+    background-color: forestgreen;
+}
+
+.btnMenu{
+    background: none;
+    color:#fff;
+    
+    border: none;
+
+    font: inherit;
+    font-size: 2rem;
+
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    
+    padding-block: 1.6rem;
+    margin-right: 2rem;
+    
+    cursor: pointer;
+}
+
+.hamburger{
+    border-top: 0.2rem solid;
+    
+    width: 2rem;
+    
+    transition: 0.5s;
+}
+
+.hamburger::before,
+.hamburger::after{
+    content: "";
+
+    display: block;
+
+    width: 2rem;
+    height: 0.2rem;
+
+    margin-top: 0.4rem;
+
+    background: currentColor;
+
+    transition: 0.5s;
+
+    position: relative;
+}
+
+.pause{
+    visibility: hidden;
+
+    width: 75%;
+    height: 0;
+
+    position: absolute;
+    left: 25%;
+    top: 10%;
+    z-index: 1;
+    
+    transition: 0.5s;
+}
+
+header.active .hamburger{
+    border-top-color: transparent;
+}
+
+header.active .hamburger::before{
+    transform: rotate(135deg);
+}
+
+header.active .hamburger::after{
+    transform: rotate(-135deg);
+    top: -0.5rem;
+}
+
+header.active .pause{
+    width: 50%;
+    height: 75%;
+
+    background-color: forestgreen;
+
+    visibility: visible;
+}
+
+#game{
+    width: 100%;
+    height: 90%;
+    
     background: linear-gradient(180deg, #96c93d, #00b09b);
 }
