--- a/public/styles/menu.css
+++ b/public/styles/menu.css
@@ -56,6 +56,7 @@ a{
     font-family: inherit;
     font-size: 3rem;
     text-align: center;
+    text-decoration: none;
 
     transition: all 0.5s;
 
